Removed more use of setters for Capabilities.